--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,3 +29,5 @@ RUN if [ "${INSTALL_NODE}" = "true" ]; then su vscode -c "source /usr/local/shar
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
 
+RUN docker-php-ext-install pdo pdo_mysql mysqli
+
