--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -36,10 +36,10 @@ services:
     volumes:
       - mariadb-data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ""
+      MYSQL_ROOT_PASSWORD: "secret"
       MYSQL_DATABASE: seko_nol
-      MYSQL_USER: root
-      MYSQL_PASSWORD: ""
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: "secret"
 
     # Add "forwardPorts": ["3306"] to **devcontainer.json** to forward MongoDB locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
